✨ New feature => Add Ghostnet Configuration and `testing` Environment to Default `config.json`  (#1364)
* Update funding mechanism

* Update test to have the PKH tz3P5zrUYGJnryVfZ5JFeLMMojdjQFGLUFiK in test config files

* Make faucet actually optional in Zod

* Skip outdated tests

* Refined messaging for funding

* Update message in e2e test

* Add ghostnet as a pre-configured testnet to Taqueria config file on init

* Update doc related to ghostnet addition

* Change net to different node

* Update rpc link to use ecad ghostnet node

* update lock

* added logging to taq test call in test

* removed optional call on config arguments and added protocol to default config.json

* The @taqueria/protocol package got accidentally updated to @taqueria/taqueria

* revert prev commit

* Remove outdated test content

* Add delay before removing the test directory to give test cases time to finish

* Ensure that all test cases with the jest spec use the local package, but our regression for ensuring that ts-jest exists should use a packed version

* Ensure that all test cases with the jest spec use the local package, but our regression for ensuring that ts-jest exists should use a packed version

* Add taquito dependency in sdk otherwise it will complain about missing taquito/signer

Co-authored-by: Jimmy Chen Chen <jimmy.chenchen@ecadlabs.com>
Co-authored-by: Alexander Zbusko <alexander.zbusko@gmail.com>
Co-authored-by: Michael Weichert <mweichert@gmail.com>

--- a/website/docs/scaffolds/taco-shop.mdx
+++ b/website/docs/scaffolds/taco-shop.mdx
@@ -209,7 +209,7 @@ function App() {
 
   // Retrieve the most recent address of the deployed contract
 
-  const [rpcUrl] = useState("https://rpc.ghostnet.teztnets.xyz");
+  const [rpcUrl] = useState("https://ghostnet.ecadinfra.com");
   const [contractAddress] = useState(
     "KT1KBBk3PXkKmGZn3K6FkktqyPRpEbzJoEPE"
     getAliasAddress(config, "hello-tacos")
