--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -116,7 +116,8 @@ plugins=$(jq -r '.plugins[].name' .taq/config.json) && echo $plugins | xargs -n 
 - 🏗️ Refactor ➾ Improve Issue & PR Templates and Automation by @hu3man in [#1395](https://github.com/ecadlabs/taqueria/pull/1395)
 - 🧹 Chore ➾ Update Docusaurus to v0.2.1 by @hu3man in [#1392](https://github.com/ecadlabs/taqueria/pull/1392)
 - fix taq installation detection by @AlirezaHaghshenas in [#1409](https://github.com/ecadlabs/taqueria/pull/1409)
-- 🚀 PR ➾ Release Taqueria v0.22.1 by @hu3man in [#1393](https://github.com/ecadlabs/taqueria/pull/1393)
+- 🚀 PR ➾ Release Taqueria v0.22.0 by @hu3man in [#1393](https://github.com/ecadlabs/taqueria/pull/1393)
+- 🚀 Release ➾ Taqueria v0.22.1 by @hu3man in [#1413](https://github.com/ecadlabs/taqueria/pull/1413)
 
 **Full Changelog**: https://github.com/ecadlabs/taqueria/compare/v0.20.2...v0.22.1
 
