Fix incorrect version in release notes

--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -2,7 +2,7 @@
 title: Taqueria Releases
 ---
 
-## Taqueria v0.20.2  
+## Taqueria v0.22.2  
 
 | Details     |               |
 | ----------- | ------------- |
@@ -118,6 +118,9 @@ plugins=$(jq -r '.plugins[].name' .taq/config.json) && echo $plugins | xargs -n 
 - fix taq installation detection by @AlirezaHaghshenas in [#1409](https://github.com/ecadlabs/taqueria/pull/1409)
 - 🚀 PR ➾ Release Taqueria v0.22.0 by @hu3man in [#1393](https://github.com/ecadlabs/taqueria/pull/1393)
 - 🚀 Release ➾ Taqueria v0.22.1 by @hu3man in [#1413](https://github.com/ecadlabs/taqueria/pull/1413)
+- chore: prevent vsix publishing on PR by @GImbrailo in [#1414](https://github.com/ecadlabs/taqueria/pull/1414)
+- 🚀 Release ➾ Taqueria v0.22.2 by @hu3man in [#1417](https://github.com/ecadlabs/taqueria/pull/1417)
+
 
 **Full Changelog**: https://github.com/ecadlabs/taqueria/compare/v0.20.2...v0.22.2
 
