--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -105,6 +105,10 @@ curl -LO https://taqueria.io/get/macos/taq
 curl -LO https://taqueria.io/get/linux/taq
 ```
 
+:::note
+For additional details on installing Taqueria, see the documentation [here](https://taqueria.io/docs/getting-started/installation/)
+:::
+
 You can update your existing projects to use Taqueria v0.22.2 plugins using the following command:
 
 ```shell
