--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -2,6 +2,75 @@
 title: Taqueria Releases
 ---
 
+## Taqueria v0.24.0  
+
+| Details     |               |
+| ----------- | ------------- |
+|Release Date | Nov 04, 2022  |
+|Release Type | Minor         |
+|Release Page | [v0.24.0](https://github.com/ecadlabs/taqueria/releases/tag/v0.24.0) |
+
+### Summary of Impactful Changes
+
+- 
+
+### New Features
+
+#### Streamlined Account Funding Mechanism
+
+
+#### Support for Beacon Wallet on Flextesa Sandbox
+
+Taqueria has implemented support for using Beacon Wallet on a Flextesa sandbox without running into CORS issues
+
+
+### Other Product Changes
+
+
+### Migrating from Legacy Versions
+
+To upgrade, you must download Taqueria v0.24.0 binary, replacing the legacy version
+
+This can be done by following these steps:
+
+1) Change into the installation directory
+
+```shell
+sudo cd /usr/local/bin
+```
+
+2) Remove the existing `taq` binary
+
+```shell
+sudo rm taq
+```
+
+3) Download the appropriate Taqueria v0.22.2 binary for your operating system
+
+```shell
+sudo curl -LO https://taqueria.io/get/macos/taq
+sudo curl -LO https://taqueria.io/get/linux/taq
+```
+
+:::warning
+The Flextesa plugin can hang or crash if old docker images exist on your machine. Run the following command to remove legacy images from your system
+
+```shell
+docker rmi $(docker images -a -q)
+```
+
+:::
+
+You can update your existing projects to use Taqueria v0.24.0 plugins using the following command:
+
+```shell
+plugins=$(jq -r '.plugins[].name' .taq/config.json) && echo $plugins | xargs -n 1 taq uninstall && echo $plugins | xargs -n 1 taq install
+```
+
+### Pull Requests
+
+
+
 ## Taqueria v0.22.2  
 
 | Details     |               |
