--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -12,19 +12,42 @@ title: Taqueria Releases
 
 ### Summary of Impactful Changes
 
-- 
+- VsCE now has a UI to execute entrypoints on contracts deployed on a Flextesa sandbox
+- VsCE has a Micheline editor which allows users to easily provide values needed for calling endpoints
+- A `taq instantiate-accounts` task has been added which creates instances of declared accounts in a target environment
+- A `taq fund` task has been added which funds each of the instantiated accounts from the `taqueria operator` account
+- An optional flag has been added to `taq originate` and `taq call` to specify an account to use 
 
 ### New Features
 
-#### Streamlined Account Funding Mechanism
+#### `taq instantiate-accounts` and `taq fund`
 
+Improvements to declared accounts and funding have been added in this release
 
-#### Support for Beacon Wallet on Flextesa Sandbox
+You can now use the `taq instantiate-account`` task to instantiate declared accounts and then call `taq fund` to fund instantiated accounts. Both tasks work under a specific environment
 
-Taqueria has implemented support for using Beacon Wallet on a Flextesa sandbox without running into CORS issues
+Additionally, users can now specify the sender of operations via the `--sender` flag for `taq originate` and `taq call`
 
+:::note
+The value for amount specified with `--tez` has been changed to  `--mutez` for `taq transfer` to allow more granular amount and give origination the ability to specify an initial balance for the originated contract
+:::
+
+#### Call Endpoints on Deployed Contracts via VsCE UI
+
+The Taqueria VsCE now allows users to easily call endpoints on contracts deployed to a sandbox. Once deployed, contracts will appear in the Flextesa browser. You can now expand each contract in the browser which will show a list of entrypoints for a particular contract. Each of these entrypoints can be called using the icon on the right. Clicking on this icon will open a Micheline editor in a new page. The Micheline editor provides a UI to enter the parameters required for the entrypoint call in plain text, and will parse the input into valid Michelson which is then used to call the entrypoint
+
+### Bug Fixes
+
+- Fixed a bug where Taqueria would disregard the environment set as default in `config.json`
 
 ### Other Product Changes
+
+- Improved GitHub issue templates
+- NPM packages and binaries are now published on each PR
+- VsCE now supports the `taq typecheck` task
+- NFT scaffold documentation improved for clarity
+- References to `tezos-client` have been refactored to `octez-client` to support Octez 15
+- When specifying an amount of tez to send via `taq call` or `taq originate`, the units are now mutez rather than tez
 
 
 ### Migrating from Legacy Versions
@@ -69,6 +92,18 @@ plugins=$(jq -r '.plugins[].name' .taq/config.json) && echo $plugins | xargs -n 
 
 ### Pull Requests
 
+- 👷 Refactor ➾ Improve Issue and PR Templates by @hu3man in https://github.com/ecadlabs/taqueria/pull/1412
+- 🛠️ Fix ➾ Update Current Version in Release Notes to v0.22.2 by @hu3man in https://github.com/ecadlabs/taqueria/pull/1419
+- 👷 Refactor ➾ (ci): Publish Packages for PR by @GImbrailo in https://github.com/ecadlabs/taqueria/pull/1383
+- 🛠️ Fix ➾ Typecheck Command in the VsCode Extension by @AlirezaHaghshenas in https://github.com/ecadlabs/taqueria/pull/1422
+- 👷 Refactor ➾ Update NFT Scaffold Website Docs by @alexzbusko in https://github.com/ecadlabs/taqueria/pull/1362
+- 🛠️ Fix ➾ Typos on Release Notes by @michaelkernaghan in https://github.com/ecadlabs/taqueria/pull/1424
+- 🛠️ Fix ➾ Add instructions for Updating `taq` Binary to Release Notes by @hu3man in https://github.com/ecadlabs/taqueria/pull/1426
+- ✨ Feature ➾ Implement a GUI for Micheline Data entry by @AlirezaHaghshenas in https://github.com/ecadlabs/taqueria/pull/1247
+- ✨ Feature ➾ Implement `taq instantiate-account` and `taq fund` to Generate and Fund Declared Accounts in a Target Environment by @jchenche in https://github.com/ecadlabs/taqueria/pull/1427
+- 🛠️ Fix ➾ Remove `default` from Zod Schema for `env` Field by @jchenche in https://github.com/ecadlabs/taqueria/pull/1437
+- 🧽 Chore ➾ Update Default Assignee on Bug Report Template to `alexzbusko` from `sinapsist` by @hu3man in https://github.com/ecadlabs/taqueria/pull/1444
+- 🛠️ Fix ➾ Use `octez-client` instead of `tezos-client` in new Flextesa image version in our plugins by @jchenche in https://github.com/ecadlabs/taqueria/pull/1443
 
 
 ## Taqueria v0.22.2  
