Fix links in release notes

--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -92,18 +92,18 @@ plugins=$(jq -r '.plugins[].name' .taq/config.json) && echo $plugins | xargs -n 
 
 ### Pull Requests
 
-- 👷 Refactor ➾ Improve Issue and PR Templates by @hu3man in https://github.com/ecadlabs/taqueria/pull/1412
-- 🛠️ Fix ➾ Update Current Version in Release Notes to v0.22.2 by @hu3man in https://github.com/ecadlabs/taqueria/pull/1419
-- 👷 Refactor ➾ (ci): Publish Packages for PR by @GImbrailo in https://github.com/ecadlabs/taqueria/pull/1383
-- 🛠️ Fix ➾ Typecheck Command in the VsCode Extension by @AlirezaHaghshenas in https://github.com/ecadlabs/taqueria/pull/1422
-- 👷 Refactor ➾ Update NFT Scaffold Website Docs by @alexzbusko in https://github.com/ecadlabs/taqueria/pull/1362
-- 🛠️ Fix ➾ Typos on Release Notes by @michaelkernaghan in https://github.com/ecadlabs/taqueria/pull/1424
-- 🛠️ Fix ➾ Add instructions for Updating `taq` Binary to Release Notes by @hu3man in https://github.com/ecadlabs/taqueria/pull/1426
-- ✨ Feature ➾ Implement a GUI for Micheline Data entry by @AlirezaHaghshenas in https://github.com/ecadlabs/taqueria/pull/1247
-- ✨ Feature ➾ Implement `taq instantiate-account` and `taq fund` to Generate and Fund Declared Accounts in a Target Environment by @jchenche in https://github.com/ecadlabs/taqueria/pull/1427
-- 🛠️ Fix ➾ Remove `default` from Zod Schema for `env` Field by @jchenche in https://github.com/ecadlabs/taqueria/pull/1437
-- 🧽 Chore ➾ Update Default Assignee on Bug Report Template to `alexzbusko` from `sinapsist` by @hu3man in https://github.com/ecadlabs/taqueria/pull/1444
-- 🛠️ Fix ➾ Use `octez-client` instead of `tezos-client` in new Flextesa image version in our plugins by @jchenche in https://github.com/ecadlabs/taqueria/pull/1443
+- 👷 Refactor ➾ Improve Issue and PR Templates by @hu3man in [#1412](https://github.com/ecadlabs/taqueria/pull/1412)
+- 🛠️ Fix ➾ Update Current Version in Release Notes to v0.22.2 by @hu3man in [#1419](https://github.com/ecadlabs/taqueria/pull/1419)
+- 👷 Refactor ➾ (ci): Publish Packages for PR by @GImbrailo in [#1383](https://github.com/ecadlabs/taqueria/pull/1383)
+- 🛠️ Fix ➾ Typecheck Command in the VsCode Extension by @AlirezaHaghshenas in [#1422](https://github.com/ecadlabs/taqueria/pull/1422)
+- 👷 Refactor ➾ Update NFT Scaffold Website Docs by @alexzbusko in [#1362](https://github.com/ecadlabs/taqueria/pull/1362)
+- 🛠️ Fix ➾ Typos on Release Notes by @michaelkernaghan in [#1424](https://github.com/ecadlabs/taqueria/pull/1424)
+- 🛠️ Fix ➾ Add instructions for Updating `taq` Binary to Release Notes by @hu3man in [#1426](https://github.com/ecadlabs/taqueria/pull/1426)
+- ✨ Feature ➾ Implement a GUI for Micheline Data entry by @AlirezaHaghshenas in [#1247](https://github.com/ecadlabs/taqueria/pull/1247)
+- ✨ Feature ➾ Implement `taq instantiate-account` and `taq fund` to Generate and Fund Declared Accounts in a Target Environment by @jchenche in [#1427](https://github.com/ecadlabs/taqueria/pull/1427)
+- 🛠️ Fix ➾ Remove `default` from Zod Schema for `env` Field by @jchenche in [#1437](https://github.com/ecadlabs/taqueria/pull/1437)
+- 🧽 Chore ➾ Update Default Assignee on Bug Report Template to `alexzbusko` from `sinapsist` by @hu3man in [#1444](https://github.com/ecadlabs/taqueria/pull/1444)
+- 🛠️ Fix ➾ Use `octez-client` instead of `tezos-client` in new Flextesa image version in our plugins by @jchenche in [#1443](https://github.com/ecadlabs/taqueria/pull/1443)
 
 
 ## Taqueria v0.22.2  
