--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -24,7 +24,7 @@ title: Taqueria Releases
 
 Improvements to declared accounts and funding have been added in this release
 
-You can now use the `taq instantiate-account`` task to instantiate declared accounts and then call `taq fund` to fund instantiated accounts. Both tasks work under a specific environment
+You can now use the `taq instantiate-account` task to instantiate declared accounts and then call `taq fund` to fund instantiated accounts. Both tasks work under a specific environment
 
 Additionally, users can now specify the sender of operations via the `--sender` flag for `taq originate` and `taq call`
 
