Update docs for this new core plugin and the new clean task within it

--- a/website/docs/plugins/plugin-basics.mdx
+++ b/website/docs/plugins/plugin-basics.mdx
@@ -18,6 +18,7 @@ During installation, NPM packages for the plugin are downloaded into the project
 
 | Name                                                   |  `<pluginName>`                   |  Description                                                                    |
 |--------------------------------------------------------|-----------------------------------|---------------------------------------------------------------------------------|
+| [Core](/docs/plugins/plugin-core/)                     | `@taqueria/plugin-core`           | Contains core utility tasks provided by Taqueria |
 | [Archetype](/docs/plugins/plugin-archetype/)           | `@taqueria/plugin-archetype`      | A compiler for the Archetype smart contract language                            |
 | [Contract Types](/docs/plugins/plugin-contract-types/) | `@taqueria/plugin-contract-types` | A type generator that produces TS types from Michelson code                     |
 | [Flextesa](/docs/plugins/plugin-flextesa/)             | `@taqueria/plugin-flextesa`       | A Tezos sandbox (testnet) that runs locally on your machine                     | 
