--- a/website/docs/scaffolds/scaffold-basics.mdx
+++ b/website/docs/scaffolds/scaffold-basics.mdx
@@ -47,4 +47,4 @@ The following scaffolds are currently available:
 | Name                         | URL                                                      | Description                                            |
 |------------------------------|----------------------------------------------------------|--------------------------------------------------------|
 | taqueria-scaffold-taco-shop  | https://github.com/ecadlabs/taqueria-scaffold-taco-shop  | Full stack dApp with a simple contract to sell tacos   |
-| taqueria-scaffold-nft        | https://github.com/ecadlabs/taqueria-scaffold-nft        | A Taqueria project for developing NFT                  |
+| taqueria-scaffold-nft        | https://github.com/ecadlabs/taqueria-scaffold-nft        | A Taqueria project for developing NFTs                  |
