Add note to core plugin

--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -12,7 +12,7 @@ title: Taqueria Releases
 
 ### Summary of Impactful Changes
 
-- A new plugin `@taqueria/plugin-core` has been added. It provides a task `taq clean` which removes stale docker images
+- A new plugin `@taqueria/plugin-core` has been added. It provides a task `taq clean` which removes stale docker images and state (note: plugin is implicitly installed when running `taq init` or `taq scaffold`)
 - VsCE now has a UI to execute entrypoints on contracts deployed on a Flextesa sandbox
 - VsCE has a Micheline editor which allows users to easily provide values needed for calling endpoints
 - A `taq instantiate-accounts` task has been added which creates instances of declared accounts in a target environment
