--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -161,7 +161,7 @@ plugins=$(jq -r '.plugins[].name' .taq/config.json) && echo $plugins | xargs -n 
 - 🛠️ Fix ➾ Remove `default` from Zod Schema for `env` Field by @jchenche in [#1437](https://github.com/ecadlabs/taqueria/pull/1437)
 - 🧽 Chore ➾ Update Default Assignee on Bug Report Template to `alexzbusko` from `sinapsist` by @hu3man in [#1444](https://github.com/ecadlabs/taqueria/pull/1444)
 - 🛠️ Fix ➾ Use `octez-client` instead of `tezos-client` in new Flextesa image version in our plugins by @jchenche in [#1443](https://github.com/ecadlabs/taqueria/pull/1443)
-- 👷 Refactor ➾ (ci): Reintroduce a preid to Prereleases by @GImbrailo in [#1423](https://github.com/ecadlabs/taqueria/pull/1423)
+- 👷 Refactor ➾ (ci): Add Support for Alpha and Release Candidate Types via -alpha and -rc Tags to Prerelease Workflow by @GImbrailo in [#1423](https://github.com/ecadlabs/taqueria/pull/1423)
 - Update tzkt to match flextesa by @AlirezaHaghshenas in [#1449](https://github.com/ecadlabs/taqueria/pull/1449)
 - ✨ Feature ➾ Add a new taq clean task and create a new core plugin to host it by @jchenche in [#1451](https://github.com/ecadlabs/taqueria/pull/1451)
 - 🧽 Chore ➾ Add the Work Description Field Back into the dev-task Issue Template by @hu3man in [#1463](https://github.com/ecadlabs/taqueria/pull/1463)
