--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -2,6 +2,63 @@
 title: Taqueria Releases
 ---
 
+## Taqueria v0.24.2  
+
+| Details     |               |
+| ----------- | ------------- |
+|Release Date | Nov 16, 2022  |
+|Release Type | Minor         |
+|Release Page | [v0.24.2](https://github.com/ecadlabs/taqueria/releases/tag/v0.24.2) |
+
+### Summary of Impactful Changes
+
+### New Features
+
+### Bug Fixes
+
+### Other Product Changes
+
+### Migrating from Legacy Versions
+
+To upgrade, you must download Taqueria v0.24.2 binary, replacing the legacy version
+
+This can be done by following these steps:
+
+1) Change into the installation directory
+
+```shell
+sudo cd /usr/local/bin
+```
+
+2) Remove the existing `taq` binary
+
+```shell
+sudo rm taq
+```
+
+3) Download the appropriate Taqueria v0.24.2 binary for your operating system
+
+```shell
+sudo curl -LO https://taqueria.io/get/macos/taq
+sudo curl -LO https://taqueria.io/get/linux/taq
+```
+
+:::warning
+The Flextesa plugin can hang or crash if old docker images exist on your machine. Install the new `@taqueria/plugin-core` plugin on the project, then run the following command to remove legacy images from your system
+
+```shell
+taq clean
+```
+:::
+
+You can update your existing projects to use Taqueria v0.24.2 plugins using the following command:
+
+```shell
+plugins=$(jq -r '.plugins[].name' .taq/config.json) && echo $plugins | xargs -n 1 taq uninstall && echo $plugins | xargs -n 1 taq install
+```
+
+### Pull Requests
+
 ## Taqueria v0.24.1  
 
 | Details     |               |
